# webui-vue-template

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  webui_index.html
scripts/: webui.cjs  webui.config.json
src/: App.vue  webui-ext.ts
src-cpp/: .gitignore  CMakeLists.txt  lib.cpp  lib.hpp  main.cpp
